--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
-    "shadcn-ui": "^0.9.1"
+    "shadcn-ui": "^0.9.1",
+    "react-flatpickr": "^3.10.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -38,7 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
