--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
-    "shadcn-ui": "^0.9.1",
-    "react-flatpickr": "^3.10.13"
+    "shadcn-ui": "^0.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
