--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.8.1",
     "react-transition-group": "^4.4.5",
     "shadcn-ui": "^0.9.1"
   },
