--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
